--- a/dogs.html
+++ b/dogs.html
@@ -6,6 +6,7 @@
 
     <link rel="stylesheet" href="./global.css" />
     <link rel="stylesheet" href="./dogs.css" />
+    <link rel="stylesheet" href="./index.css">
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Epilogue:wght@300;400;500;600;700;800&display=swap"
@@ -97,7 +98,7 @@
           />
 
           <button class="shelter8">
-            <button class="group-parent2" autofocus="{true}" id="shelter">
+            <button class="group-parent2" id="shelter" onclick="navigateToLogin()">
               <img class="frame-child2" alt="" src="./public/group-13.svg" />
 
               <div class="shelter9">Shelter?</div>
@@ -105,12 +106,12 @@
           </button>
         </div>
         <div class="headnavigation5">
-          <a class="home4" href="/home.html">Home</a>
-          <a class="adopt16" href="/adopt.html">Adopt</a>
-          <a class="products6" href="/products.html">Products</a>
-          <a class="inquiry4" href="/inquire.html">Inquiry</a>
-          <a class="contact4" href="/contacts.html">Contact?</a>
-        </div>
+          <a class="home4" href="index.html">Home</a>
+          <a class="adopt16" href="dogs.html">Adopt</a>
+          <a class="products6" href="products.html">Products</a>
+          <a class="inquiry4" href="inquiry.php">Inquiry</a>
+          <a class="contact4" href="javascript:void(0);" onclick="openOverlay()">Contact?</a> 
+        </div>         
         <a class="logo5" href="index.html">
           <div class="bg5"></div>
           <img class="vector-icon81" alt="" src="./public/vector51.svg" />
@@ -198,15 +199,39 @@
           </div>
         </a>
       </div>
+          <!-- openOverlay -->
+    <div id="contactOverlay" style="display: none; position: fixed; padding: 18px; top: 0; left: 0; width: 100%; height: 100%; background-color: rgba(0,0,0,0.5); z-index: 1;">
+      <div style="position: relative; top: 50%; left: 50%; transform: translate(-50%, -50%); background-color: var(--color-darkgray);padding: var(--padding-25xl) 9px var(--padding-25xl) var(--padding-xl); border-radius: var(--br-xl); width: 80%; max-width: auto; box-shadow: 0 0 10px rgba(0,0,0,0.25);">
+          <span onclick="closeOverlay()" style="position: absolute; top: 10px; right: 15px; font-size: 24px; font-weight: bold; color: black; cursor: pointer;">&times;</span>
+          <div class="contact-container" style="text-align: center; color: white; ">
+              <h1>Prefer another way to find us?</h1>
+              <p class="contact-info" style="margin: 10px 0;">+977 9801010101, +977 01-5970120, +977 9801000078</p>
+              <p class="contact-info" style="margin: 10px 0; font-weight: bold; color: var(--color-darkslategray);">info@petopia.com</p>
+              <!-- You can embed a Google Map here -->
+          </div>
+      </div>
+    </div>
     </div>
 
+
+
     <script>
+                  function navigateToLogin() {
+              window.location.href = 'login.php';
+            }
+
       var frameLink = document.getElementById("frameLink");
       if (frameLink) {
         frameLink.addEventListener("click", function (e) {
           window.location.href = "./kaluu.html";
         });
       }
+      function openOverlay() {
+            document.getElementById('contactOverlay').style.display = 'block';
+        }
+        function closeOverlay() {
+            document.getElementById('contactOverlay').style.display = 'none';
+        }
       </script>
   </body>
 </html>
