--- a/pupsicle.html
+++ b/pupsicle.html
@@ -162,7 +162,7 @@
           <h1 class="pupsicle6">Pupsicle</h1>
         </div>
       </div>
-      <img class="image-icon" alt="" src="./public/image@2x.png" />
+      <img class="image-icon" alt="" src="./public/image-3@2x.png" />
 
       <nav class="navbar3" id="mainNavigationBar">
         <div class="rightnavigation3">
