--- a/products.html
+++ b/products.html
@@ -6,6 +6,7 @@
 
     <link rel="stylesheet" href="./global.css" />
     <link rel="stylesheet" href="./products.css" />
+    <link rel="stylesheet" href="index.css">
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Epilogue:wght@300;400;500;600;700;800&display=swap"
@@ -90,7 +91,7 @@
         <div class="productcard1-parent">
           <div class="productcard11">
             <div class="productimage3">
-              <a class="image-1-container" href="/pupsicle">
+              <a class="image-1-container" href="pupsicle.html">
                 <img
                   class="image-1-icon1"
                   alt=""
@@ -126,7 +127,7 @@
                 <div class="div8">$ 40.00</div>
               </div>
               <div class="productname3">
-                <a class="product-title3" href="/pupsicle">Pupsicle</a>
+                <a class="product-title3" href="pupsicle.html">Pupsicle</a>
               </div>
             </div>
             <button class="buybutton3" id="search">
@@ -141,7 +142,7 @@
           </div>
           <div class="productcard21">
             <div class="productimage3">
-              <a class="image-1-container" href="/pupsicle">
+              <a class="image-1-container" href="pupsicle.html">
                 <img
                   class="image-3-icon1"
                   alt=""
@@ -177,7 +178,7 @@
                 <div class="div10">$ 65.00</div>
               </div>
               <div class="productname4">
-                <a class="product-title3" href="/pupsicle">
+                <a class="product-title3" href="pupsicle.html">
                   <p class="range-bully">Wellness</p>
                   <p class="sticks">Starter Pack</p>
                 </a>
@@ -195,7 +196,7 @@
           </div>
           <div class="productcard3">
             <div class="productimage3">
-              <a class="image-1-container" href="/pupsicle">
+              <a class="image-1-container" href="pupsicle.html">
                 <img
                   class="image-4-icon1"
                   alt=""
@@ -225,7 +226,7 @@
                 <div class="div12">$ 14.99</div>
               </div>
               <div class="productname5">
-                <a class="product-title3" href="/pupsicle">
+                <a class="product-title3" href="pupsicle.html">
                   <p class="range-bully">Free</p>
                   <p class="range-bully">Range Bully</p>
                   <p class="sticks">Sticks</p>
@@ -308,7 +309,7 @@
           />
 
           <button class="shelter3">
-            <button class="frame-button" autofocus="{true}" id="shelter">
+            <button class="frame-button" id="shelter" onclick="navigateToLogin()">
               <img class="group-icon" alt="" src="./public/group-13.svg" />
 
               <div class="shelter4">Shelter?</div>
@@ -316,17 +317,48 @@
           </button>
         </div>
         <div class="headnavigation2">
-          <a class="home2" href="/index.html">Home</a>
-          <a class="adopt8" href="/dogs.html">Adopt</a>
-          <a class="products3" href="/products.html">Products</a>
-          <a class="inquiry2" href="/inquire.html">Inquiry</a>
-          <a class="contact2" href="/contacts.html">Contact?</a>
+          <a class="home2" href="index.html">Home</a>
+          <a class="adopt8" href="dogs.html">Adopt</a>
+          <a class="products3" href="products.html">Products</a>
+          <a class="inquiry2" href="inquiry.php">Inquiry</a>
+          <a class="contact2" href="javascript:void(0);" onclick="openOverlay()">Contact?</a> 
         </div>
         <a class="logo2" href="index.html">
           <div class="bg2"></div>
           <img class="vector-icon60" alt="" src="./public/vector51.svg" />
         </a>
       </nav>
+
     </div>
+
+    <div class="home-page">
+      <div id="contactOverlay" style="display: none; position: fixed; padding: 18px; top: 0; left: 0; width: 100%; height: 100%; background-color: rgba(0,0,0,0.5); z-index: 1;">
+        <div style="position: relative; top: 50%; left: 50%; transform: translate(-50%, -50%); background-color: var(--color-darkgray);padding: var(--padding-25xl) 9px var(--padding-25xl) var(--padding-xl); border-radius: var(--br-xl); width: 80%; max-width: auto; box-shadow: 0 0 10px rgba(0,0,0,0.25);">
+            <span onclick="closeOverlay()" style="position: absolute; top: 10px; right: 15px; font-size: 24px; font-weight: bold; color: black; cursor: pointer;">&times;</span>
+            <div class="contact-container" style="text-align: center; color: white; ">
+                <h2>Prefer another way to find us?</h2>
+                <p class="contact-info" style="margin: 10px 0;">+977 9801010101, +977 01-5970120, +977 9801000078</p>
+                <p class="contact-info" style="margin: 10px 0; font-weight: bold; color: var(--color-darkslategray);">info@petopia.com</p>
+                <!-- You can embed a Google Map here -->
+            </div>
+        </div>
+      </div>
+    </div>
+
+    <script>
+      function navigateToLogin() {
+        window.location.href = 'login.php';
+      }
+
+      function openOverlay() {
+      document.getElementById('contactOverlay').style.display = 'block';
+  }
+  function closeOverlay() {
+      document.getElementById('contactOverlay').style.display = 'none';
+  }
+
+
+    </script>
+
   </body>
 </html>
